--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>NeuroEvolution : Flappy Bird</title>
+	<title>遗传算法 : Flappy Bird</title>
 	<link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+	<meta charset="utf-8">
 </head>
 <body>
 	<canvas id="flappy" width="500" height="512"></canvas> <br/>
@@ -12,7 +13,7 @@
 	<button onclick="speed(300)">x5</button> 
 	<button onclick="speed(0)">MAX</button> 
 	<br/>
-	<a href="http://github.com/xviniette/FlappyLearning">GitHub Repository</a>
+	<a href="http://github.com/Kinglyl/FlappyLearning/">GitHub Repository</a>
 	<script src = "Neuroevolution.js"></script>
 	<script src = "game.js"></script>
 </body>
