--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<button onclick="speed(300)">x5</button> 
 	<button onclick="speed(0)">MAX</button> 
 	<br/>
-	<a href="http://github.com/Kinglyl/FlappyLearning/">GitHub Repository</a>
+	<a href="https://github.com/Kinglyl/FlappyLearning/">GitHub Repository</a>
 	<script src = "Neuroevolution.js"></script>
 	<script src = "game.js"></script>
 </body>
